syntax = "proto3";

package user;

option go_package = "userservice/proto;user";

import "googleapis/google/api/annotations.proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse) {
    option (google.api.http) = {
      post: "/v1/users"
      body: "*"
    };
  }

  rpc GetUserById(GetUserRequest) returns (UserResponse){
    option (google.api.http) = {
      get: "/v1/users/{user_id}"
    };
  }
  rpc UpdateUserScore(UpdateUserScoreRequest) returns (UserResponse){
    option (google.api.http) = {
      patch: "/v1/users/{user_id}/score"
      body: "*"
    };
  }
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message GetUserRequest {
  string user_id = 1;
}

message UpdateUserScoreRequest {
  string user_id = 1;
  int32 delta = 2;
}

message UserResponse {
  string user_id = 1;
  string name = 2;
  string email = 3;
  int32 score = 4;
}
